<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="opcon.com.printer.EditDetailsActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="opcon.com.printer.AddReceiptActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"

            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:text="@string/common_information"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:hint="@string/note"
                android:background="@color/transparent"
                android:id="@+id/best_common_information"
                android:textColor="@color/textColor"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:text="@string/warraty"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:hint="@string/note"
                android:background="@color/transparent"
                android:id="@+id/best_warranty"
                android:textColor="@color/textColor"
                android:text=""
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:text="@string/comminucation_information"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:hint="@string/note"
                android:background="@color/transparent"
                android:id="@+id/best_communication"
                android:textColor="@color/textColor"
                android:text=""
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/ok">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>
        </RelativeLayout>



    </LinearLayout>

</ScrollView>
