<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:id="@+id/are_u_sure">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/are_u_sure_to_create_a_user"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:text="@string/name_and_surname"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColorHint="@color/textColor"
                android:background="@color/transparent"
                android:id="@+id/name"
                android:textColor="@color/textColor"
                android:text=""
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:text="@string/customer_phone"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="0.2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"
                android:background="@color/indicatorGrey"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="16sp"

                android:inputType="phone"
                android:textColorHint="@color/textColor"
                android:background="@color/transparent"
                android:id="@+id/phone"
                android:textColor="@color/textColor"
                android:text=""
                android:layout_centerInParent="true">

                <requestFocus/>
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="0.2dp"
                android:background="@color/indicatorGrey"/>

        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/alert"
        android:visibility="gone"
        />


</LinearLayout>